--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Harshadkumar Patel",
+  "author": "Gaurav Singh",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
